--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,11 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "symfony/finder": ">=2.5"
+        "php": "^7.4|^8.0",
+        "symfony/finder": "^4|^5|^6|^7"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9|^10"
     },
     "autoload": {
         "psr-4": {
