--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/finder": "^4|^5|^6|^7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9|^10"
+        "phpunit/phpunit": "^9|^10",
+        "symfony/var-dumper": "^4|^5|^6|^7"
     },
     "autoload": {
         "psr-4": {
