--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "symfony/finder": "^4|^5|^6|^7"
+        "symfony/finder": "^4|^5|^6|^7",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9|^10",
